
-- MCMCspec$getSamplers(ind), MCMCspec$setSamplers(ind), and MCMCspec$removeSamplers(ind) can optionally also accept a character vector argument, and will act on all samplers which sample the nodes specified

-- NIMBLE will no longer "hang" when used in RStudio

-- reordered argument names to nimbleModel to put in more logical order of importance

DEVELOPER LEVEL CHANGES

-- added a variety of error checking for various distribution functions and now generally use doubles in distribution functions in C++

-- modified API for nimble options to mimic R's options(), including nimbleOptions() and getOptions() and renaming of the underlying nimble options object to be .nimbleOptions.

-- added an environment, nimbleUserNamespace, in the package namespace, that allows user-supplied information to control the behavior of NIMBLE. At the moment, only used for user-supplied distributions list.

-- testing of user-defined distributions and functions in BUGS code (tests/test-user.R)

-- full suite of testing for truncation/censoring/constraints added (tests/test-trunc.R)

-- names of custom MCMC sampler nimbleFunctions need not begin with "sampler_"

-- nimbleFunction provided for use in algorithms: initializeModel(model), to perform sensible model initialization at the onset of an algorithm

BUG FIXES

-- fixed bug where dexp was passing the wrong parameter (rate instead of scale) to C++; we now use our own dexp_nimble, which calls Rmath's dexp correctly

-- set default for deparse to width.cutoff=500L to avoid splitting of lines when going from expressions to string names

                        CHANGES IN VERSION 0.3-1 (Mar. 7, 2015)

USER LEVEL CHANGES

-- fully allow data to be provided as part of constants argument in nimbleModel for compatibility with JAGS and BUGS, which mix data and constants

-- added Dirichlet-multinomial conjugacy handling
