@@ -381,25 +381,32 @@ modelDefClass$methods(removeTruncationWrapping = function() {
         if(BUGSdecl$type != 'stoch' || !(BUGSdecl$valueExpr[[1]] == "T" || BUGSdecl$valueExpr[[1]] == "I")) next
         BUGSdecl$truncated <- TRUE
 
-        dist <- BUGSdecl$valueExpr[[1]]
-        if(!getDistributionsInfo('pqAvail')[dist]) 
-            stop("Cannot implement truncation for ", dist, "; 'p' and 'q' functions not available.")
-           
-        if(BUGSdecl$valueExpr[[3]] != "") BUGSdecl$range[1] <- BUGSdecl$valueExpr[[3]]  
-        if(BUGSdecl$valueExpr[[4]] != "") BUGSdecl$range[1] <- BUGSdecl$valueExpr[[4]]  
+        BUGSdecl$range <- list()
+        if(BUGSdecl$valueExpr[[3]] != "") BUGSdecl$range$lower <- BUGSdecl$valueExpr[[3]]  
+        if(BUGSdecl$valueExpr[[4]] != "") BUGSdecl$range$upper <- BUGSdecl$valueExpr[[4]]  
         
         if(BUGSdecl$valueExpr[[1]] == "I")
             warning(paste0("Interpreting I(,) as truncation (equivalent to T(,)) in ", deparse(BUGSdecl$code), "; this is only valid when ", deparse(BUGSdecl$targetExpr), " has no unobserved (stochastic) parents."))
                 
         newCode <- BUGSdecl$code
-        if(BUGSdecl$range[1] == declInfo[[i]]$range[1] && BUGSdecl$range[2] == declInfo[[i]]$range[2]) {  # user specified bounds that are the same as the range
-            BUGSdecl$truncated <- FALSE
-        }
         newCode[[3]] <- BUGSdecl$valueExpr[[2]]  # insert the core density function call
+
+        tmp <- as.character(newCode[[3]][[1]])
+        distRange <- getDistribution(tmp)$range
+        if(BUGSdecl$range$lower == distRange[1] && BUGSdecl$range$upper == distRange[2])  # user specified bounds that are the same as the range
+            BUGSdecl$truncated <- FALSE
         
         BUGSdeclClassObject <- BUGSdeclClass$new()
         BUGSdeclClassObject$setup(newCode, BUGSdecl$contextID, BUGSdecl$sourceLineNumber, BUGSdecl$truncated, BUGSdecl$range)
+
+        dist <- as.character(BUGSdeclClassObject$valueExpr[[1]])
+        if(!getDistributionsInfo('pqAvail')[dist]) 
+            stop("Cannot implement truncation for ", dist, "; 'p' and 'q' functions not available.")
+
         declInfo[[i]] <<- BUGSdeclClassObject
+
+           
+
     }
 })
 
@@ -515,7 +522,7 @@ modelDefClass$methods(reparameterizeDists = function() {
         newCode[[3]] <- newValueExpr
         
         BUGSdeclClassObject <- BUGSdeclClass$new()
-        BUGSdeclClassObject$setup(newCode, BUGSdecl$contextID, BUGSdecl$sourceLineNumber, BUGSdecl$truncated)
+        BUGSdeclClassObject$setup(newCode, BUGSdecl$contextID, BUGSdecl$sourceLineNumber, BUGSdecl$truncated, BUGSdecl$range)
         declInfo[[i]] <<- BUGSdeclClassObject
     }  # close loop over declInfo
 })
@@ -549,15 +556,14 @@ modelDefClass$methods(addRemainingDotParams = function() {
 modelDefClass$methods(insertDistributionBounds = function() {
     ## pulls bounds out of T() syntax and puts in lower and upper fields
     for(i in seq_along(declInfo)) {
-        
         BUGSdecl <- declInfo[[i]]
-        if(BUGSdecl$type != 'stoch' || is.null(BUGSdecl$truncated)) next
+        if(BUGSdecl$type != 'stoch' || !BUGSdecl$truncated) next
 
         newValueExpr <- BUGSdecl$valueExpr   ## grab the RHS (distribution)
 
         nParams <- length(newValueExpr) 
-        newValueExpr[[nParams + 1]] <- BUGSdecl$range[1]
-        newValueExpr[[nParams + 2]] <- BUGSdecl$range[2]
+        newValueExpr[[nParams + 1]] <- BUGSdecl$range$lower
+        newValueExpr[[nParams + 2]] <- BUGSdecl$range$upper
         names(newValueExpr)[(nParams + 1):(nParams + 2)] <- c('lower', 'upper')
 
         newCode <- BUGSdecl$code
@@ -580,7 +586,7 @@ modelDefClass$methods(replaceAllConstants = function() {
         newCode <- replaceConstantsRecurse(declInfo[[i]]$code, constantsEnv, constantsNamesList)$code
         
         BUGSdeclClassObject <- BUGSdeclClass$new()
-        BUGSdeclClassObject$setup(newCode, declInfo[[i]]$contextID, declInfo[[i]]$sourceLineNumber, declInfo[[i]]$truncated)
+        BUGSdeclClassObject$setup(newCode, declInfo[[i]]$contextID, declInfo[[i]]$sourceLineNumber, declInfo[[i]]$truncated, declInfo[[i]]$range)
         declInfo[[i]] <<- BUGSdeclClassObject
     }
 })
